# scopefun-software

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt
doc/ScopeFun_v2/: AnalogInputScaling.ods  ConfigData_v2.ods  DAC_Vout_calc.ods  DIG_Vout_calc.ods  DigitalOutputControl.ods  FrameData_v2.ods  Timebase.ods
image/icon/: createCNS.src
lib/: CMakeLists.txt
package/: desc.txt
package/scopefun-linux-32/DEBIAN/: control
package/scopefun-linux-32/usr/share/applications/: sfScope32r.desktop  sfServer32r.desktop
package/scopefun-linux-32/usr/share/doc/scopefun-linux/: changelog  copyright
package/scopefun-linux-64/DEBIAN/: control
package/scopefun-linux-64/lib/udev/rules.d/: 51-oscilloscope.rules
package/scopefun-linux-64/usr/share/applications/: sfScope64r.desktop  sfServer64r.desktop
package/scopefun-linux-64/usr/share/doc/scopefun-linux/: changelog
package/scopefun-mac/: AppIcon.icns  Info.plist
source/: CMakeLists.txt  runastyle.bat  scopefun.ini  sfApi.cmake  sfLibs.cmake  sfScope.cmake  sfServer.cmake  sfversion.h  sfversion.h.in
source/api/: scopefun.c  scopefunapi.h  scopefunapi.i  scopefunapi.py  scopefunapi_wrap_python.c  swigpython.bat
source/core/: core.cpp  core.h
source/core/data/: array.h  map.h  ring.h  set.h
source/core/file/: file.cpp  file.h
source/core/flag/: flag.h
source/core/format/: format.cpp  format.h
source/core/global/: endian.h  macro.h  platform.h  type.h
source/core/input/: input.cpp  input.h
source/core/manager/: manager.cpp  manager.h
source/core/math/: const.h  interval.h  matrix4x4.h  vector4.h
source/core/memory/: memory.cpp  memory.h
source/core/opengl/: opengl.cpp  opengl.h  opengl_device.cpp  opengl_device.h  opengl_devicestate.cpp  opengl_devicestate.h  opengl_shader.cpp  opengl_shader.h  opengl_staticmesh.cpp  opengl_staticmesh.h  opengl_texture.cpp  opengl_texture.h
source/core/purec/: purec.c  purec.h  puresocket.c  puresocket.h  pureusb.c  pureusb.h
source/core/render/camera/: camera.cpp  camera.h
source/core/render/canvas/: canvas2d.cpp  canvas2d.h  canvas3d.cpp  canvas3d.h
source/core/render/font/: font.cpp  font.h
source/core/render/render/: render.cpp  render.h
source/core/string/: corestring.cpp  corestring.h
source/core/timer/: timer.cpp  timer.h
source/license/: license.txt  source.cpp
source/osciloscope/: osciloscope.cpp  osciloscope.h
source/osciloscope/app/: app.cpp  managers.cpp
source/osciloscope/gui/: OsciloskopConnection.cpp  OsciloskopConnection.h  OsciloskopDebug.cpp  OsciloskopDebug.h  OsciloskopDisplay.cpp  OsciloskopDisplay.h  OsciloskopHardwareGenerator.cpp  OsciloskopHardwareGenerator.h  OsciloskopInfo.cpp  OsciloskopInfo.h  OsciloskopMeasure.cpp  OsciloskopMeasure.h  OsciloskopOsciloskop.cpp  OsciloskopOsciloskop.h  OsciloskopSoftwareGenerator.cpp  OsciloskopSoftwareGenerator.h  OsciloskopStorage.cpp  OsciloskopStorage.h  OsciloskopThermal.cpp  OsciloskopThermal.h  guiheader.h  osc.cpp  osc.h  osciloskop.fbp
source/osciloscope/osciloscope/: osccontrol.cpp  osccontrol.h  oscfft.cpp  oscfft.h  oscfile.cpp  oscfile.h  oscmng.cpp  oscmng.h  oscrender.cpp  oscrender.h  oscsettings.cpp  oscsettings.h  oscsignal.cpp  oscsignal.h
source/osciloscope/rc/: dpi.manifest  osc.res
source/osciloscope/window/: tool.cpp  tool.h  wnddisplay.cpp  wnddisplay.h  wndgenerate.cpp  wndgenerate.h  wndmain.cpp  wndmain.h  wndshadow.cpp  wndshadow.h
source/osciloscope/xpm/: xpm128.c  xpm16.c  xpm256.c  xpm32.c  xpm512.c  xpm64.c  xpm96.c
source/server/: main.cpp  server.cpp  server.h  servermanager.cpp  servermanager.h  usb.cpp
source/server/ui/: ScopeFunServerUI.cpp  ScopeFunServerUI.h  serverui.cpp  serverui.fbp  serverui.h  uimessage.cpp
source/test/: bode.py  capture.py  histogram.py  sfplot.html  simple_scopefun_server.py
